# wonder-clouds

./: podman-compose.yml
.github/workflows/: deploy.yml  update_deployment.yml
backend/: .example.env  .gitignore  README.md  container-compose.yml  create_super_user.sh  dockerfile  podman-compose.yml  pyproject.toml  requirements.txt  wait_for_db.sh
backend/app/models/: category.py  user.py
backend/app/schemas/: credential.py  user.py
backend/appointment/: models.py
backend/appointment/migrations/: 0001_initial.py  0002_alter_appointment_status.py
backend/blog/: models.py  serializers.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py  0002_alter_blog_content.py  0003_alter_blog_cover.py
backend/category/: models.py  serializers.py
backend/category/migrations/: 0001_initial.py
backend/client/: models.py
backend/client/migrations/: 0001_initial.py
backend/server/: settings.py  swagger.py  urls.py
backend/smtp/: functions.py  serializers.py  urls.py  views.py
backend/src/: main.py
backend/src/api/v1/: category.py
backend/src/database/: engine.py
backend/src/models/: client.py  credential.py  popup.py  publication.py
backend/src/schemas/: client.py  popup.py  publication.py
backend/src/services/: category.py
backend/tag/: models.py  serializers.py
backend/tag/migrations/: 0001_initial.py
frontend/: dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: middleware.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/languages/: translations.ts
(+54 files in other folders)
